<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="items_list">
        <item>Main Page</item>
        <item>Profile</item>
        <item>Create Event</item>
        <item>Logout</item>
    </string-array>

    <string name="app_name">Meeple</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="meeple">Meeple</string>
    <string name="login_hint">Username</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="login_button_text">Connect</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="signup_button">Sign Up</string>
    <string name="password_validation_text">Password confirmation</string>
    <string name="signup">Sign Up</string>
    <string name="email_example">example@email.com</string>
    <string name="title_name">Name</string>
    <string name="title_email">Email</string>
    <string name="event_name_hint">Event name</string>
    <string name="event_desc_hint">Event description</string>
    <string name="event_tags_hint">Event tags</string>
    <string name="event_creation_button">Create event</string>
    <string name="title_tags">Tags</string>
    <string name="tags_default">Tags</string>
    <string name="tag_hint">Tag him/her !</string>
    <string name="tag_button">Tag !</string>
    <string name="event_timeout_hint">Timeout (minutes)</string>
    <string name="search_button">Search events</string>
    <string name="radius_hint">Radius (km)</string>
    <string name="save_changes">Save Changes</string>

</resources>
